--- a/src/translations/en/general.json
+++ b/src/translations/en/general.json
@@ -34,6 +34,7 @@
     "failed": "failed",
     "delivered": "delivered",
     "shareLead": "Share Lead",
+    "preview": "Preview",
     "or": "or"
   },
   "fields": {
